<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/f2"
    tools:context=".EMIActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/principal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/hint_principal"
                android:inputType="number"
                android:singleLine="true"
                android:textStyle="bold"

                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/hint_interest"
                android:inputType="number"
                android:singleLine="true"
                android:textStyle="bold"

                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:hint="@string/hint_years"
                android:inputType="number"
                android:textColor="#141212"
                android:textStyle="bold"
                tools:ignore="Autofill" />

            <com.spark.submitbutton.SubmitButton

                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Submit"
                android:textColor="@color/black"
                app:sub_btn_background="#25da59"

                app:sub_btn_duration="8000"
                app:sub_btn_line_color="@color/black"
                app:sub_btn_ripple_color="#c93a36"
                app:sub_btn_tick_color="#FFFFFF" />

            <EditText
                android:id="@+id/emi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_emi"
                android:inputType="number"
                android:textStyle="bold"

                android:maxEms="0"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/interest_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_interest_total"
                android:textStyle="bold"

                android:inputType="number"
                tools:ignore="Autofill" />

        </LinearLayout>>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

